--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "wavefile": "^11.0.0"
   },
   "devDependencies": {
